[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'ns-api'
version = '3.1.0'
authors = [
    {name = 'Michiel Scholten', email = 'michiel@diginaut.net'},
]
description= 'api wrapper for Dutch Railways (NS)'
readme = 'README.rst'
requires-python = '>=3.7'
keywords = ['public transport', 'api', 'NS', 'railroads']
license = {text = 'Apache'}
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    'pytz',
]
# dynamic = ['version']

[project.urls]
'Homepage' = 'https://github.com/aquatix/ns-api'
'Bug Tracker' = 'https://github.com/aquatix/ns-api/issues'

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
]
lint.ignore = ['D203']
line-length = 120
lint.select = [
    'C9',
    'D',
    'E',
    'F',
    'W',
]

[tool.ruff.lint.mccabe]
max-complexity = 10
